--- a/30-helm/everything.yaml
+++ b/30-helm/everything.yaml
@@ -45,6 +45,7 @@ pingfederate-admin:
   envs:
     SERVER_PROFILE_URL: https://github.com/pingidentity/pingidentity-server-profiles.git
     SERVER_PROFILE_PATH: baseline/pingfederate
+    COLORIZE_LOGS: true
     
 pingfederate-engine:
   enabled: true
